crates/swc_css_parser/tests/errors/custom-properties/exclamation/output.stderr
error: Expected !important
 --> $DIR/tests/errors/custom-properties/exclamation/input.css:1:15
  |
1 | .class {--foo:!; }
  |               ^^^

